<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowCarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCarDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_details"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="72sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/model"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtModelValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Corsa Sedan 2001/2002"
            android:textSize="18sp"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/txtBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/brand"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBrandValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Chevrolet"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtChassis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/chassis"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtChassisValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="654569412954"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/license_plate"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLicensePlateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="GDE1234"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/price"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPriceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="15800"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPctDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/discount_percentage"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPctDiscountValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:text="10"
                android:textAlignment="viewStart"
                android:textSize="36sp" />

            <ImageButton
                android:id="@+id/btnEditDiscount"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="onClickChangeDiscount"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_edit" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtTotalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/total_price"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotalPriceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="14220"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnShowCarPictures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/holo_red_light"
            android:onClick="onClickShowCarPictures"
            android:text="@string/show_car_pictures"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/holo_green_light"
            android:onClick="onClickSold"
            android:text="@string/sold"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>